Optimisation de l'application mobile et ajout d'un service de nettoyage Docker

--- a/app-react/Dockerfile
+++ b/app-react/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine
 
 # Installer les dépendances nécessaires
-RUN apk add --no-cache bash curl tini
+RUN apk add --no-cache bash curl
 
 # Définir le répertoire de travail
 WORKDIR /app
@@ -9,17 +9,32 @@ WORKDIR /app
 # Installer un serveur web léger
 RUN npm install -g serve
 
-# Créer une application React simple
-RUN npx create-react-app my-app --template minimal
+# Créer un répertoire pour l'application
+RUN mkdir -p /app/build
 
-# Aller dans le répertoire de l'application
-WORKDIR /app/my-app
-
-# Modifier le fichier App.js pour afficher un message personnalisé
-RUN sed -i 's|<p>Edit <code>src/App.js</code> and save to reload.</p>|<h1>YourMedia Mobile App</h1><p>Application mobile pour YourMedia</p>|g' src/App.js
-
-# Construire l'application
-RUN npm run build
+# Créer un fichier HTML simple pour l'application mobile
+RUN echo '<!DOCTYPE html>\n\
+<html lang="fr">\n\
+<head>\n\
+    <meta charset="UTF-8">\n\
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n\
+    <title>YourMedia Mobile App</title>\n\
+    <style>\n\
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f5f5f5; }\n\
+        .container { text-align: center; padding: 20px; background-color: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }\n\
+        h1 { color: #333; margin-bottom: 10px; }\n\
+        p { color: #666; }\n\
+        .logo { font-size: 48px; margin-bottom: 20px; }\n\
+    </style>\n\
+</head>\n\
+<body>\n\
+    <div class="container">\n\
+        <div class="logo">📱</div>\n\
+        <h1>Hello World!</h1>\n\
+        <p>YourMedia Mobile Application</p>\n\
+    </div>\n\
+</body>\n\
+</html>' > /app/build/index.html
 
 # Créer un utilisateur non-root pour des raisons de sécurité
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
@@ -32,6 +47,7 @@ EXPOSE 8080
 # Variables d'environnement
 ENV NODE_ENV=production
 ENV HOST=0.0.0.0
+ENV NODE_OPTIONS="--max-old-space-size=256"
 
 # Health check pour vérifier que l'application est en cours d'exécution
 HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
