--- a/scripts/config/grafana/java-app-logs-dashboard.json
+++ b/scripts/config/grafana/java-app-logs-dashboard.json
@@ -42,7 +42,7 @@
       "pluginVersion": "7.3.7",
       "targets": [
         {
-          "expr": "{job=\"tomcat\"}",
+          "expr": "{job=~\"tomcat|java-app\"}",
           "refId": "A"
         }
       ],
@@ -99,7 +99,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "sum(count_over_time({job=\"tomcat\"}[5m])) by (level)",
+          "expr": "sum(count_over_time({job=~\"tomcat|java-app\"}[5m])) by (level)",
           "legendFormat": "{{level}}",
           "refId": "A"
         }
@@ -183,7 +183,7 @@
       "pluginVersion": "7.3.7",
       "targets": [
         {
-          "expr": "{job=\"tomcat\", level=\"ERROR\"}",
+          "expr": "{job=~\"tomcat|java-app\", level=\"ERROR\"}",
           "refId": "A"
         }
       ],
