Correction et optimisation du monitoring des logs Java et des conteneurs Docker
- Correction de la configuration Docker Compose pour utiliser les images privées
- Optimisation du script de synchronisation des logs Tomcat
- Amélioration de la configuration Prometheus pour surveiller le JMX exporter
- Optimisation de la configuration Promtail pour analyser les logs Java
- Ajout de scripts utilitaires pour la configuration et le démarrage des conteneurs
- Correction du workflow Docker pour ajouter des arguments de construction

--- a/.github/workflows/3-docker-build-deploy.yml
+++ b/.github/workflows/3-docker-build-deploy.yml
@@ -59,6 +59,8 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:mobile-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            NODE_ENV=production
 
       # Build and push Grafana image
       - name: Build and push Grafana image
