--- a/scripts/config/prometheus/prometheus.yml
+++ b/scripts/config/prometheus/prometheus.yml
@@ -17,7 +17,14 @@ scrape_configs:
   - job_name: 'java-tomcat'
     metrics_path: '/hello-world-dev/actuator/prometheus'
     static_configs:
-      - targets: ['10.0.1.135:8080']
+      - targets: ['10.0.1.93:8080']
+        labels:
+          instance: "ec2-java-tomcat"
+          app: "java-app"
+
+  - job_name: 'tomcat-jmx'
+    static_configs:
+      - targets: ['10.0.1.93:8081']
         labels:
           instance: "ec2-java-tomcat"
           app: "java-app"
