--- a/scripts/config/promtail/promtail-config.yml
+++ b/scripts/config/promtail/promtail-config.yml
@@ -7,7 +7,6 @@ positions:
 
 clients:
   - url: http://loki:3100/loki/api/v1/push
-    tenant_id: "default"
 
 scrape_configs:
   - job_name: system
@@ -18,126 +17,19 @@ scrape_configs:
           job: varlogs
           __path__: /var/log/*log
 
-  - job_name: tomcat
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: tomcat
-          instance: "ec2-java-tomcat"
-          app: "java-app"
-          __path__: /mnt/ec2-java-tomcat-logs/catalina.out
-    pipeline_stages:
-      - regex:
-          expression: '(?P<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}.\d{3}) (?P<level>[A-Z]+) (?P<thread>\[.*?\]) (?P<logger>.*?) - (?P<message>.*)'
-      - labels:
-          level:
-          thread:
-          logger:
-      - timestamp:
-          source: timestamp
-          format: '2006-01-02 15:04:05.000'
-      - output:
-          source: message
-
-  - job_name: tomcat-access-logs
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: tomcat
-          instance: "ec2-java-tomcat"
-          app: "java-app"
-          log_type: "access"
-          __path__: /mnt/ec2-java-tomcat-logs/localhost_access_log*.txt
-    pipeline_stages:
-      - regex:
-          expression: '(?P<client_ip>\S+) \S+ \S+ \[(?P<timestamp>.*?)\] "(?P<method>\S+) (?P<path>\S+) (?P<protocol>\S+)" (?P<status>\d+) (?P<bytes>\d+)'
-      - labels:
-          method:
-          path:
-          status:
-      - timestamp:
-          source: timestamp
-          format: '02/Jan/2006:15:04:05 -0700'
-      - output:
-          source: message
-
-  - job_name: java-app-logs
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: java-app
-          instance: "ec2-java-tomcat"
-          app: "java-app"
-          __path__: /mnt/ec2-java-tomcat-logs/*.log
-    pipeline_stages:
-      - regex:
-          expression: '(?P<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}.\d{3}) (?P<level>[A-Z]+) (?P<thread>\[.*?\]) (?P<logger>.*?) - (?P<message>.*)'
-      - labels:
-          level:
-          thread:
-          logger:
-      - timestamp:
-          source: timestamp
-          format: '2006-01-02 15:04:05.000'
-      - output:
-          source: message
-
   - job_name: docker
     static_configs:
       - targets:
           - localhost
         labels:
           job: docker
-          __path__: /var/lib/docker/containers/*/*-json.log
-    pipeline_stages:
-      - json:
-          expressions:
-            output: log
-            stream: stream
-            attrs: attrs
-            time: time
-            container_id: attrs.container_id
-            container_name: attrs.container_name
-            image: attrs.image
-      - regex:
-          expression: '(?P<container_name>([a-zA-Z0-9][a-zA-Z0-9_.-]*))'
-          source: container_name
-      - labels:
-          container_name:
-          container_id:
-          image:
-      - timestamp:
-          source: time
-          format: RFC3339Nano
-      - output:
-          source: output
-  - job_name: react-app
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: react-app
-          app: "react-app"
-          __path__: /var/lib/docker/containers/*/*-json.log
-    pipeline_stages:
-      - json:
-          expressions:
-            output: log
-            stream: stream
-            attrs: attrs
-            time: time
-            container_name: attrs.container_name
-      - match:
-          selector: '{container_name=~".*react.*|.*app-mobile.*"}'
-          stages:
-            - labels:
-                container_name:
-                app: react-app
-      - timestamp:
-          source: time
-          format: RFC3339Nano
-      - output:
-          source: output
+          __path__: /var/log/docker/*.log
+
+  - job_name: journal
+    journal:
+      max_age: 12h
+      labels:
+        job: systemd-journal
+    relabel_configs:
+      - source_labels: ['__journal__systemd_unit']
+        target_label: 'unit'
