--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -1002,16 +1002,43 @@ jobs:
           echo "::group::Configuration des agents de monitoring"
           
           # Attendre que les instances soient prêtes
+          echo "Attente de 30 secondes pour s'assurer que les instances sont prêtes..."
           sleep 30
+          
+          # Configuration de la clé SSH
+          echo "Configuration de la clé SSH..."
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ steps.get_ec2_ip.outputs.java_tomcat_ip }} >> ~/.ssh/known_hosts 2>/dev/null
+          ssh-keyscan -H ${{ steps.get_ec2_ip.outputs.monitoring_ip }} >> ~/.ssh/known_hosts 2>/dev/null
+          
+          # Vérification des adresses IP
+          echo "Vérification des adresses IP..."
+          if [ -z "${{ steps.get_ec2_ip.outputs.java_tomcat_ip }}" ]; then
+            echo "Erreur: L'adresse IP de l'instance Java/Tomcat n'est pas définie"
+            exit 1
+          fi
+          if [ -z "${{ steps.get_ec2_ip.outputs.monitoring_ip }}" ]; then
+            echo "Erreur: L'adresse IP de l'instance Monitoring n'est pas définie"
+            exit 1
+          fi
           
           # Configuration de l'instance Java/Tomcat
           echo "Configuration de l'instance Java/Tomcat..."
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ steps.get_ec2_ip.outputs.java_tomcat_ip }} "sudo bash -c 'curl -s https://raw.githubusercontent.com/${{ github.repository }}/main/scripts/ec2-java-tomcat/setup-monitoring-agents.sh | bash'"
+          if ! ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 ec2-user@${{ steps.get_ec2_ip.outputs.java_tomcat_ip }} "sudo bash -c 'curl -s https://raw.githubusercontent.com/${{ github.repository }}/main/scripts/ec2-java-tomcat/setup-monitoring-agents.sh | bash'"; then
+            echo "Erreur: Impossible de configurer l'instance Java/Tomcat"
+            exit 1
+          fi
           
           # Configuration de l'instance Monitoring
           echo "Configuration de l'instance Monitoring..."
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ steps.get_ec2_ip.outputs.monitoring_ip }} "sudo bash -c 'curl -s https://raw.githubusercontent.com/${{ github.repository }}/main/scripts/ec2-monitoring/setup-monitoring.sh | bash'"
+          if ! ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 ec2-user@${{ steps.get_ec2_ip.outputs.monitoring_ip }} "sudo bash -c 'curl -s https://raw.githubusercontent.com/${{ github.repository }}/main/scripts/ec2-monitoring/setup-monitoring.sh | bash'"; then
+            echo "Erreur: Impossible de configurer l'instance Monitoring"
+            exit 1
+          fi
           
+          echo "Configuration des agents de monitoring terminée avec succès"
           echo "::endgroup::"
 
       # Étape 9: Vérification des services de monitoring
