--- a/app-java/src/main/resources/application.properties
+++ b/app-java/src/main/resources/application.properties
@@ -11,9 +11,9 @@ logging.level.com.yourmedia=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Actuator configuration for monitoring
-management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoints.web.exposure.include=prometheus,health,info,metrics
 management.endpoint.health.show-details=always
-management.prometheus.metrics.export.enabled=true
+management.metrics.export.prometheus.enabled=true
 
 # Disable database configuration as this is a simple Hello World app
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
