--- a/app-java/pom.xml
+++ b/app-java/pom.xml
@@ -83,12 +83,12 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
-                        <configuration>
-                            <classifier>exec</classifier>
-                            <mainClass>com.yourmedia.backend.Application</mainClass>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>com.yourmedia.backend.Application</mainClass>
+                    <layout>WAR</layout>
+                </configuration>
             </plugin>
 
             <!-- Maven War Plugin -->
@@ -104,11 +104,6 @@
                             <filtering>true</filtering>
                         </resource>
                     </webResources>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
                 </configuration>
             </plugin>
         </plugins>
