--- a/app-java/pom.xml
+++ b/app-java/pom.xml
@@ -83,22 +83,18 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
-                        <configuration>
-                            <mainClass>com.yourmedia.backend.Application</mainClass>
-                            <layout>WAR</layout>
-                            <includes>
-                                <include>
-                                    <groupId>org.springframework.boot</groupId>
-                                    <artifactId>spring-boot-starter-actuator</artifactId>
-                                </include>
-                                <include>
-                                    <groupId>io.micrometer</groupId>
-                                    <artifactId>micrometer-registry-prometheus</artifactId>
-                                </include>
-                            </includes>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>com.yourmedia.backend.Application</mainClass>
+                    <layout>WAR</layout>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
             <!-- Maven War Plugin -->
@@ -108,6 +104,9 @@
                 <version>3.3.2</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                        <addClasspath>true</addClasspath>
+                    </archive>
                     <webResources>
                         <resource>
                             <directory>src/main/resources</directory>
